[Gepardec/mega#701] Removed all occurrencies of budget-calculation-excel-url

--- a/src/main/resources/emails/PL_PROJECT_CONTROLLING.html
+++ b/src/main/resources/emails/PL_PROJECT_CONTROLLING.html
@@ -3,7 +3,7 @@
     <li>ggf. Zeitnachweise übermitteln</li>
     <li>Controlling durchführen</li>
     <li>Rechnung(en) erstellen</li>
-    <li><a href="$budgetCalculationExcelUrl$">Planrechnung</a> ist zu aktualisieren</li>
+    <li>Planrechnung ist zu aktualisieren</li>
     <li><a href="$wikiEomUrl$">Checkliste laut Wiki</a></li>
     <li>Status in MEGA aktualisieren</li>
 </ul>
